error logs/localhost-1749980658439.log
react-dom.development.js:29895 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
LiveWorkflowDemo.tsx:753 Uncaught Error: Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\coding\Monk-AI\frontend\src\components\Navigation.tsx: Unexpected token, expected "," (21:2)

[0m [90m 19 |[39m   [33mAutoAwesome[39m [36mas[39m [33mAutoAwesomeIcon[39m[33m,[39m
 [90m 20 |[39m   [33mSlideshow[39m [36mas[39m [33mSlideshowIcon[39m
[31m[1m>[22m[39m[90m 21 |[39m   [33mGroup[39m [36mas[39m [33mGroupIcon[39m
 [90m    |[39m   [31m[1m^[22m[39m
 [90m 22 |[39m } [36mfrom[39m [32m'@mui/icons-material'[39m[33m;[39m
 [90m 23 |[39m
 [90m 24 |[39m [36minterface[39m [33mNavigationItem[39m {[0m
    at constructor (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:363:19)
    at TypeScriptParserMixin.raise (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6609:19)
    at TypeScriptParserMixin.unexpected (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6629:16)
    at TypeScriptParserMixin.expect (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6910:12)
    at TypeScriptParserMixin.parseNamedImportSpecifiers (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14313:14)
    at TypeScriptParserMixin.parseImportSpecifiersAndAfter (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14160:37)
    at TypeScriptParserMixin.parseImport (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14153:17)
    at TypeScriptParserMixin.parseImport (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:9382:26)
    at TypeScriptParserMixin.parseStatementContent (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12795:27)
    at TypeScriptParserMixin.parseStatementContent (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:9469:18)
    at TypeScriptParserMixin.parseStatementLike (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12685:17)
    at TypeScriptParserMixin.parseModuleItem (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12662:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:13235:36)
    at TypeScriptParserMixin.parseBlockBody (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:13228:10)
    at TypeScriptParserMixin.parseProgram (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12541:10)
    at TypeScriptParserMixin.parseTopLevel (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12531:25)
    at TypeScriptParserMixin.parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14410:10)
    at TypeScriptParserMixin.parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:10086:18)
    at parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14444:38)
    at parser (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at step (:3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:261:32)
    at :3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:273:13
    at async.call.result.err.err (:3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:223:11)
    at constructor (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:363:19)
    at TypeScriptParserMixin.raise (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6609:19)
    at TypeScriptParserMixin.unexpected (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6629:16)
    at TypeScriptParserMixin.expect (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:6910:12)
    at TypeScriptParserMixin.parseNamedImportSpecifiers (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14313:14)
    at TypeScriptParserMixin.parseImportSpecifiersAndAfter (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14160:37)
    at TypeScriptParserMixin.parseImport (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14153:17)
    at TypeScriptParserMixin.parseImport (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:9382:26)
    at TypeScriptParserMixin.parseStatementContent (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12795:27)
    at TypeScriptParserMixin.parseStatementContent (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:9469:18)
    at TypeScriptParserMixin.parseStatementLike (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12685:17)
    at TypeScriptParserMixin.parseModuleItem (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12662:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:13235:36)
    at TypeScriptParserMixin.parseBlockBody (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:13228:10)
    at TypeScriptParserMixin.parseProgram (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12541:10)
    at TypeScriptParserMixin.parseTopLevel (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:12531:25)
    at TypeScriptParserMixin.parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14410:10)
    at TypeScriptParserMixin.parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:10086:18)
    at parse (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\parser\lib\index.js:14444:38)
    at parser (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (:3000/C:\coding\Monk-AI\frontend\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at step (:3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:261:32)
    at :3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:273:13
    at async.call.result.err.err (:3000/C:\coding\Monk-AI\frontend\node_modules\gensync\index.js:223:11)
    at ./src/components/Navigation.tsx (LiveWorkflowDemo.tsx:753:1)
    at options.factory (react refresh:37:1)
    at __webpack_require__ (bootstrap:22:1)
    at fn (hot module replacement:61:1)
    at hotRequire (react refresh:20:1)
    at ./src/App.tsx (log.js:78:1)
    at options.factory (react refresh:37:1)
    at __webpack_require__ (bootstrap:22:1)
    at fn (hot module replacement:61:1)
    at hotRequire (react refresh:20:1)
localhost/:1 Uncaught (in promise) Error: A listener indicated an asynchronous response by returning true, but the message channel closed before a response was received
